--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,10 @@
  */appliToolsEx/.idea/encodings.xml
  */appliToolsEx/.idea/misc.xml
  */appliToolsEx/.idea/modules.xml
-
+ .idea/*.xml
+ .idea/encodings.xml
+ .idea/misc.xml
+ .idea/modules.xml
 
 # CMake
 cmake-build-*/
